# eq-core

./: .gitignore  CMakeLists.txt  README.md
src/: GainProcessor.cpp  GainProcessor.h
tests/: test_gain.cpp
